-------------------------------------------------------------------------------
  Version 20170323 (2017-03-22)
-------------------------------------------------------------------------------
  * Updated icons and dependencies

-------------------------------------------------------------------------------
  Version 20170206 (2017-02-06)
-------------------------------------------------------------------------------
  * Initial release