@@ -2,8 +2,8 @@ Sparky Backup System
 
 This tool lets you create a hybrid ISO image from your SparkyLinux installation. The package provides a YAD-based GUI for the sparky-backup-core.
 
-Copyright (C) 2012-2017 Paweł "pavroo" Pijanowski <pavroo@onet.eu>
-    Under GNU GPLv3
+Copyright (C) 2012-2018 Paweł "pavroo" Pijanowski <pavroo@onet.eu> 
+under GNU GPLv3
 
 The tool is forked from Remastersys & Remastersys-GUI
 Oryginaly created by Tony Brijeski under GNU GPLv2
