@@ -6,20 +6,27 @@
 #  Created November 23, 2011
 #
 #  Forked for SparkyLinux by pavroo <pavroo@onet.eu> 2013/06/24
-#  Last update 2016/11/04
-#  Copyright 2013,2014,2015,2016,2017 Under the GNU GPL2 License
+#  Copyright 2013-2018 Under the GNU GPL2 License
+#  Last update 2018/03/27
+
+# get default's locale file
+DEFLOCDIR="/usr/share/sparky/sparky-backup-sys"
+if [ "`cat /etc/default/locale | grep pl_PL`" != "" ]; then
+. $DEFLOCDIR/pl
+else
+. $DEFLOCDIR/en
+fi
 
 testroot="`whoami`"
-
 if [ "$testroot" != "root" ]; then
-	echo "Must be root"
+	echo "$LOCAL1 $LOCAL2"
 	exit 1
 fi
 
 SKELUSER="$1"
 if [ "$SKELUSER" = "" ]; then
-	echo "Usage is: sparkybackup-skelcopy username"
-	echo "Where username is a valid user on the system"
+	echo "$LOCAL76: sparkybackup-skelcopy $LOCAL77"
+	echo "$LOCAL78"
 	exit 1
 fi
 
@@ -27,14 +34,14 @@ SKELFOLDER=`grep "^$SKELUSER:" /etc/passwd | awk -F ":" '{print $6}'`
 
 if [ -d "$SKELFOLDER" ]; then
 	cd $SKELFOLDER
-	echo "Cleaning up /etc/skel of the files we will copy over"
+	echo "$LOCAL79"
 	
 	if [ -d /etc/skel ]; then
 		rm -rf /etc/skel
 		mkdir /etc/skel
 	fi
 	
-	echo "Copying config files to /etc/skel"
+	echo "$LOCAL80"
 	
 	if [ -f .xscreensaver ]; then
 		rsync -a .xscreensaver /etc/skel
@@ -361,6 +368,6 @@ if [ -d "$SKELFOLDER" ]; then
 
 else
 
-	echo "$1 either not found or doesn't have a proper home folder - exiting."
+	echo "$1 $LOCAL81 $LOCAL2"
 	exit 1
 fi
