@@ -1,0 +1,87 @@
+# English localization file for Sparky Backup Sys.
+# Copyright 2018 Paweł "pavroo" Pijanowski <pavroo@onet.eu> 2018/03/27
+# Under the GNU GPL v2
+# Last update 2018/03/27 by pavroo
+LOCAL1="Must be root..."
+LOCAL2="Exiting now..."
+LOCAL3="It's Live system!"
+LOCAL4="Install Sparky on a hard drive then remaster it."
+LOCAL5="Please select an option:"
+LOCAL6="About Sparky Backup System"
+LOCAL7="Read this if you'd like to add support for UEFI machines"
+LOCAL8="Edit the sparkybackup configuration file"
+LOCAL9="Edit the sparkylinux-installer configuration file"
+LOCAL10="Clean up APT cache to reduce iso image size"
+LOCAL11="Create a backup ISO image for live user"
+LOCAL12="Remove all copied files from the working directory"
+LOCAL13="View the backup log file"
+LOCAL14="The sparkybackup.log file does not exist"
+LOCAL15="SparkyBackup is a tool which can make"
+LOCAL16="a copy of your present installation of SparkyLinux,"
+LOCAL17="including all extra packages you have already installed."
+LOCAL18="It will not copy web browsers, IM and other applications"
+LOCAL19="personal settings, e-mails and files you created."
+LOCAL20="It will make a bootable iso image which can be burnt"
+LOCAL21="on a blank CD/DVD or copy onto an USB stick."
+LOCAL22="The tool can be also run in a text mode by the command:"
+LOCAL23="option"
+LOCAL24="Sparky Backup System is based on Remastersys-Gui,"
+LOCAL25="Sparky Backup Core is based on Remastersys"
+LOCAL26="and published under GNU GPLv2 License."
+LOCAL27="The GUI uses Sparky Backup Core version"
+LOCAL28="Bugs and suggestions can be reported at"
+LOCAL29="If you would like to build a new iso image"
+LOCAL30="which can be run on machines feature UEFI motherboard, do:"
+LOCAL31="Download 6 DEB files from Debian (stable/testing) repository:"
+LOCAL32="or"
+LOCAL33="Move all of the 64 (or 32) bit packages to the directory:"
+LOCAL34="Install Calamares installer if you wish."
+LOCAL35="Anyway Sparky Advanced Installer provides UEFI support too."
+LOCAL36="Starting from SparkyLinux version 4.0, the tool"
+LOCAL37="supports 32 and 64 bit machines with UEFI motherboard."
+LOCAL38="This will copy your desktop basic settings"
+LOCAL39="so they become the default for the live system."
+LOCAL40="This includes desktop background and other personalized"
+LOCAL41="desktop settings that aren't hardcoded to the current"
+LOCAL42="users home folder."
+LOCAL43="Need to compile a list of valid users."
+LOCAL44="It may take a few seconds to complete so be patient."
+LOCAL45="Do you want to continue?"
+LOCAL46="Nothing has been done!"
+LOCAL47="Click OK to close the window."
+LOCAL48="Please select a user whose settings"
+LOCAL49="you would like to make the default."
+LOCAL50="The user you chose does not have a proper home directory."
+LOCAL51="Click OK to return to the main menu."
+LOCAL52="Copying the user:"
+LOCAL53="settings now."
+LOCAL54="Please wait..."
+LOCAL55="The settings for"
+LOCAL56="have been copied."
+LOCAL57="Click OK to create a backup iso now."
+LOCAL58="Do not interrupt this process."
+LOCAL59="Click OK to start the backup LiveCD/DVD process."
+LOCAL60="You didn't select any user."
+LOCAL61="Click OK to continue."
+LOCAL62="The compressed file system is larger than the"
+LOCAL63="iso9660 specification allows for a single file."
+LOCAL64="You must try to reduce the amount of data you"
+LOCAL65="are backing up and try again."
+LOCAL66="Your new files:"
+LOCAL67="are ready in the directory:"
+LOCAL68="It is recommended to test the iso in a virtual machine or"
+LOCAL69="on a rewritable cd/dvd/usb to ensure it works as desired."
+LOCAL70="This will remove all spare and downloaded DEB packages by APT."
+LOCAL71="Do you want to make cleaning now?"
+LOCAL72=""
+LOCAL73="This will remove all the copied files from the working directories."
+LOCAL74=""
+LOCAL75="Cleaning completed."
+LOCAL76="Usage is"
+LOCAL77="username"
+LOCAL78="Where username is a valid user on the system"
+LOCAL79="Cleaning up /etc/skel of the files we will copy over"
+LOCAL80="Copying config files to /etc/skel"
+LOCAL81="either not found or doesn't have a proper home folder."
+### desktop entry can be translate too ###
+# Comment[en_US]=SparkyLinux system backup tool
