@@ -1,0 +1,87 @@
+# Polish localization file for Sparky Backup Sys.
+# Copyright 2018 Paweł "pavroo" Pijanowski <pavroo@onet.eu> 2018/03/27
+# Under the GNU GPL v2
+# Last update 2018/03/27 by pavroo
+LOCAL1="Musisz być adminem..."
+LOCAL2="Wyjście..."
+LOCAL3="To jest system Live!"
+LOCAL4="Zainstaluj Sparky na dysku twardym a następnie go modyfikuj."
+LOCAL5="Proszę wybrać opcję:"
+LOCAL6="O Sparky Backup System"
+LOCAL7="Przeczytaj, jeśli chcesz dodać wsparcie dla maszyn UEFI"
+LOCAL8="Edycja pliku konfiguracyjnego sparkybackup"
+LOCAL9="Edycja pliku konfiguracyjnego sparkylinux-installer"
+LOCAL10="Wyczyść cache APT aby zmniejszyć rozmiar obrazu iso"
+LOCAL11="Utwórz obraz ISO systemu dla użytkownika live"
+LOCAL12="Usuń z katalogu roboczego wszystkie skopiowane pliki"
+LOCAL13="Zobacz plik logów backup-u"
+LOCAL14="Plik sparkybackup.log nie istnieje"
+LOCAL15="SparkyBackup to narzędzie, które pozwala utworzyć"
+LOCAL16="kopię twojej obecnej instalacji SparkyLinux,"
+LOCAL17="wliczając w to wszyskie dodatkowo zainstalowane pakiety."
+LOCAL18="Nie zostaną skopiowane ustawienia przeglądarek www, IM"
+LOCAL19="i innych aplikacji oraz e-maile i utworzone pliki."
+LOCAL20="Zostanie utworzony bootowalny obraz iso, który można nagrać"
+LOCAL21="na czystej płycie CD/DVD lub skopiować na dysk USB."
+LOCAL22="Program można również użyć w trybie tekstowym, poleceniem:"
+LOCAL23="opcja"
+LOCAL24="Sparky Backup System bazuje na Remastersys-Gui,"
+LOCAL25="Sparky Backup Core bazuje na Remastersys"
+LOCAL26="i jest udostępniony na licencji GNU GPLv2."
+LOCAL27="GUI używa Sparky Backup Core wersja"
+LOCAL28="Błędy i sugestie można zgłaszać na"
+LOCAL29="Jeśli chcesz zbudować nowy obraz iso, który"
+LOCAL30="będzie można użyć na maszynie UEFI, zrób:"
+LOCAL31="Pobierz 6 plików DEB z repozytoriów Debiana (stabilny/testowy):"
+LOCAL32="lub"
+LOCAL33="Przenieś wszystkie pakiety 64 (lub 32) bit do katalogu:"
+LOCAL34="Jeśli chcesz, zainstaluj instalator Calamares."
+LOCAL35="Sparky Advanced Installer oferuje również wsparcie dla UEFI."
+LOCAL36="Począwszy od wersji SparkyLinux 4.0, ta aplikacja"
+LOCAL37="wspiera 32 i 64 bitowe maszyny z UEFI."
+LOCAL38="Zostaną skopiowane ustawienia twojego pulpitu,"
+LOCAL39="które staną się domyślnymi w systemie live."
+LOCAL40="Wchodzi w to tapeta pulpitu oraz inne, spersonalizowane"
+LOCAL41="ustawienia pulpitu, które nie są na stałe przypisane do"
+LOCAL42="bieżącego katalogu domowego użytkownika."
+LOCAL43="Trzeba utworzyć listę aktualnych użytkowników."
+LOCAL44="Może to potrwać kilka sekund, więc bądź cierpliwy."
+LOCAL45="Czy chcesz kontynuować?"
+LOCAL46="Nic nie został zrobione!"
+LOCAL47="Kliknij OK aby zamknąć to okno."
+LOCAL48="Proszę wybrać użytkownika, którego ustawienia"
+LOCAL49="chcesz ustawić jako domyślne."
+LOCAL50="Wybrany użytkownik nie posiada właściwego katalogu domowego."
+LOCAL51="Kliknij OK aby powrócić do głównego menu."
+LOCAL52="Kopiowanie ustawień użytkownika:"
+LOCAL53=""
+LOCAL54="Proszę czekać..."
+LOCAL55="Ustawinia dla"
+LOCAL56="zostały skopiowane."
+LOCAL57="Kliknij OK aby utworzyć teraz obraz iso."
+LOCAL58="Nie wolno przerywać tego procesu."
+LOCAL59="Kliknij OK aby rozpocząć proces tworzenia backup LiveCD/DVD."
+LOCAL60="Nie wybrałeś żadnego użytkownika."
+LOCAL61="Kliknij OK aby kontynuować."
+LOCAL62="Skompresowany system plików jest większy niż"
+LOCAL63="pozwala specyfikacja iso9660 dla pojedyńczego pliku."
+LOCAL64="Musisz zredukować ilość danych, które"
+LOCAL65="archiwizujesz i spróbować ponownie."
+LOCAL66="Twoje nowe pliki:"
+LOCAL67="są gotowe w katalogu:"
+LOCAL68="Zalecane jest aby przetestować iso w maszynie wirtualnej lub"
+LOCAL69="na nośniku cd/dvd/usb aby mieć pewność, że działa poprawnie."
+LOCAL70="Zostaną usunięte zbędne i pobrane przez APT pakiety DEB."
+LOCAL71="Czy chcesz posprzątać teraz?"
+LOCAL72=""
+LOCAL73="Wszystkie skopiowane pliki zostaną usunięte z katalogu roboczego."
+LOCAL74=""
+LOCAL75="Sprzątanie zakończone."
+LOCAL76="Użycie jest"
+LOCAL77="nazwaużytkownika"
+LOCAL78="Gdzie nazwaużytkownika to nazwa istniejącego użytkownika systemu"
+LOCAL79="Sprzątanie /etc/skel dla plików, które zostaną skopiowane"
+LOCAL80="Kopiowanie plików konfiguracyjnych do /etc/skel"
+LOCAL81="nie został znaleziony lub nie posiada właściwego katalogu domowego."
+### desktop entry can be translate too ###
+# Comment[pl_PL]=Narzędzie do tworzenia kopii zapasowej SparkyLinux
