@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20180327 (2018-03-27)
+-------------------------------------------------------------------------------
+  * Added localization
+  * Added aptitude to cleaning option
+  * Small improvenments
+
+-------------------------------------------------------------------------------
   Version 20170323 (2017-03-22)
 -------------------------------------------------------------------------------
   * Updated icons and dependencies
